@@ -1,4 +1,4 @@
-# __COPYRIGHT__
+r __COPYRIGHT__
 # __FILE__ __REVISION__ __DATE__ __DEVELOPER__
 
 
@@ -36,6 +36,11 @@ RELEASE 0.95 - XXX
 
   - Allow the LIBS construction variable to be a single string or File
     node, not a list, when only one library is needed.
+
+  From Anthony Roach:
+
+  - Supply an error message if the user tries to configure a BuildDir
+    for a directory that already has one.
 
 
 
